# QTPYGUI

./: README.md  example_01.py  example_02_calculator.py  popups.py  pyproject.toml  qtpygui.py  requirements.txt  ruff.toml  setup.py  sys_consts.py
.github/workflows/: python-publish.yml
Examples/: example_01.py  example_02_calculator.py  example_03_all_elements.py  example_04_tab_control.py  setup.py
examples/: OPMS  auto_doco.py  example_01.py  example_02_calculator.py  example_03_all_elements.py  example_04_tab_control.py  hello_world.py
examples/OPMS/: README.md  database.py  opms.py  password.py  sys_consts.py  sys_settings.py
src/: popups.py  qtpygui.py  sqldb.py
src/QTPYGUI/: CHANGELOG.md  file_utils.py  langtran.py  popups.py  qtpygui.py  requirements.txt  sqldb.py  sys_consts.py  utils.py
